refactor!: architecture overhaul for GraalVM compatibility
Major architectural refactor to support GraalVM Native Image.

Core:
- Remove all usage of runtime reflection.
- Replace Spring Boot with a lightweight custom framework.
- Migrate JSON handling to custom 'Jsonk' library.
- Implement an annotation processor for builtin class generation.
- Replace hardcoded IO with a custom serialization module.
- Replace Antlr with handwritten parsers.

Build:
- Remove obsolete 'compiler', 'assembly', and 'compiler-asm' modules.
- Rename 'kcompiler' module to 'compiler'.
- Enable fat JAR generation directly in 'server' and 'compiler' modules.
- Add native image build configuration.

Code Style:
- Use Lombok for getters and setters generation.

Database:
- Adds index to 'instance_id' on 'index_entry' to resolve serialization errors.